Update qiskit_bot.yaml for new guides (#2720)
Closes #1602

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -25,11 +25,13 @@ notifications:
     - "@frankharkins"
   "docs/guides/calibration-jobs":
     - "@abbycross"
+    - "dtmcclure"
   "docs/guides/classical-feedforward-and-control-flow":
     - "`@kevinsung`"
     - "`@jakelishman`"
   "docs/guides/cloud-setup":
     - "@beckykd"
+    - "@abbycross"
   "docs/guides/common-parameters":
     - "`@nbronn`"
     - "@beckykd"
@@ -336,11 +338,13 @@ notifications:
     - "@johannesgreiner"
     - "@pacomf"
     - "@Bagherpoor"
+    - "@kaelynj"
   "docs/guides/execution-modes-rest-api":
     - "@born-2learn"
     - "@johannesgreiner"
     - "@pacomf"
     - "@Bagherpoor"
+    - "@kaelynj"
   "docs/guides/transpile-rest-api":
     - "@born-2learn"
     - "@johannesgreiner"
