--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -133,6 +133,15 @@ notifications:
     - "@johannesgreiner"
     - "@JanTrautman"
     - "@Gabriel-Alvarado-Barrios"
+  "docs/guides/qunova-chemistry":
+    - "@aidanpellow"
+    - "@jaewan-qunova"
+    - "@Jenay-Patel"
+    - "@PilsunYoo01"
+    - "@RowPJ"
+    - "@shanemcfarthing"
+    - "@johannesgreiner"
+    - "@pandasa123"
   "docs/guides/latest-updates":
     - "@abbycross"
   "docs/guides/manage-cost":
