--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -128,4 +128,7 @@ notebooks = [
 
     # This notebook might work but we didn't have time to test it before merging
     "docs/guides/kipu-optimization.ipynb",
+
+    # Todo: check this notebook
+    "docs/guides/qunova-chemistry",
 ]
