--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -130,5 +130,5 @@ notebooks = [
     "docs/guides/kipu-optimization.ipynb",
 
     # Todo: check this notebook
-    "docs/guides/qunova-chemistry",
+    "docs/guides/qunova-chemistry.ipynb",
 ]
