--- a/.github/workflows/weekly-checks.yml
+++ b/.github/workflows/weekly-checks.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           ./start --legacy &
           sleep 20
-      - name: Check all pages render (legacy app)
+      - name: Check all non-API pages render (legacy app)
         run: >
           npm run check:pages-render -- --legacy
 
