--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,15 +60,27 @@ jobs:
       - name: Pull preview image
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: ./start --pull-only
-      - name: Start local Docker preview
+      - name: Start local Docker preview (cloud app)
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: |
           ./start --apis &
           sleep 1
-      - name: Check that pages render
+      - name: Check that pages render (cloud app)
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: |
           npm run check:pages-render -- --from-file .github/outputs/all_changed_files.txt
+      - name: Stop Docker preview (cloud app)
+        if: steps.all-changed-files.outputs.any_changed == 'true'
+        run: docker ps -q | xargs docker stop
+      - name: Start local Docker preview (legacy app)
+        if: steps.all-changed-files.outputs.any_changed == 'true'
+        run: |
+          ./start --legacy &
+          sleep 1
+      - name: Check that non-API pages render (legacy app)
+        if: steps.all-changed-files.outputs.any_changed == 'true'
+        run: |
+          npm run check:pages-render -- --legacy --from-file .github/outputs/all_changed_files.txt
 
       - name: Setup Python environment
         uses: ./.github/actions/set-up-notebook-testing
