Add docs team member to qiskit_bot.yaml for qunova

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -144,6 +144,7 @@ notifications:
     - "@shanemcfarthing"
     - "@johannesgreiner"
     - "@pandasa123"
+    - "@abbycross"
   "docs/guides/latest-updates":
     - "@abbycross"
   "docs/guides/manage-cost":
