Pin 2.0.0rc1 for nb-tester to audit notebooks

--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -1,7 +1,7 @@
 # We pin to exact versions for a more reproducible and
 # stable build.
 
-qiskit[all]~=1.4.1
+qiskit[all]~=2.0.0rc1
 qiskit-ibm-runtime~=0.36.1
 qiskit-aer~=0.16.4
 qiskit-serverless~=0.20.0
