--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
   -e scripts/nb-tester
   -r scripts/nb-tester/requirements.txt
 setenv = PYDEVD_DISABLE_FILE_VALIDATION=1
-commands = test-docs-notebooks {posargs} --config-path scripts/config/notebook-testing.toml --cancel-trailing-jobs
+commands = test-docs-notebooks {posargs} --config-path scripts/config/notebook-testing.toml
 
 [testenv:{lint,fix}]
 deps = 
