--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "js-yaml": "^4.1.0",
     "lodash-es": "^4.17.21",
     "markdown-link-extractor": "^3.1.0",
-    "mdast": "^3.0.0",
+    "remark": "^15.0.0",
     "mkdirp": "^3.0.1",
     "p-map": "^6.0.0",
     "rehype-parse": "^8.0.0",
