Temporarily point to main branch of ibm-runtime

--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -1,8 +1,9 @@
 # We pin to exact versions for a more reproducible and
 # stable build.
 
-qiskit[all]~=2.0.0rc1
-qiskit-ibm-runtime~=0.36.1
+qiskit[all]==2.0.0rc1
+#qiskit-ibm-runtime~=0.36.1
+qiskit-ibm-runtime @ git+https://github.com/Qiskit/qiskit-ibm-runtime@main
 qiskit-aer~=0.16.4
 qiskit-serverless~=0.20.0
 qiskit-ibm-catalog~=0.4
