Migration guide for providers to implement V2 primitives (#2496)
This is a proposal for content to address #2469. After a brief
discussion with @jyu00 we agreed that we should focus this migration
guide on showing how to implement new primitives for providers. However,
I have not been involved in all discussions regarding the vision for
this migration (and conversations around backend.run tend to raise a lot
of different opinions) so I would appreciate **confirmation that the
content proposed fits the direction we want to show**.

The page is currently in a pretty raw state, missing formatting, API ref
links, a review on the titles, capitalization, etc, but I wanted to open
a PR as fast as possible to ask for **opinions on including the backend
primitive wrappers as a tool for provider migration**. This idea came
from inspecting the only instance I know of external provider beyond the
immediate product sphere, which is
https://github.com/qiskit-community/qiskit-aqt-provider/tree/master, and
subclasses backend primitives to expose their own primitive
implementations. Following this, I decided to structure the page as
follows:

- motivation: @jyu00 mentioned this was often requested by users, I
tried to keep it short and touch on the usefulness of the abstraction
level of the primitives
- Backend primitives as a migration alternative for providers that
already implemented backend.run (following the AQT example)
- Custom primitives as an alternative for providers that want it, or
didn't implement backend.run (following the StatevectorSampler and
StatevectorEstimator) examples

Please let me know if you have any other take on how the content should
look like @javabster, @jyu00.

---------

Co-authored-by: Rebecca Dimock <beckyd@us.ibm.com>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>
Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Jessie Yu <jessieyu@us.ibm.com>
Co-authored-by: Arnau Casau I Playa <arnau.casau@ibm.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -292,6 +292,10 @@ notifications:
     - "@kaelynj"
   "docs/migration-guides/qiskit-algorithms-module":
     - "@ElePT"
+  "docs/migration-guides/external-providers-primitives-v2":
+    - "@ElePT"
+    - "@jyu00"
+    - "@beckykd"
   "docs/migration-guides/qiskit-opflow-module":
     - "@ElePT"
   "docs/migration-guides/qiskit-quantum-instance":
@@ -309,6 +313,10 @@ notifications:
     - "@ElePT"
     - "@beckykd"
   "docs/migration-guides/qiskit-runtime-from-ibm-provider":
+    - "@jyu00"
+    - "@ElePT"
+    - "@beckykd"
+  "docs/migration-guides/qiskit-backend-primitives":
     - "@jyu00"
     - "@ElePT"
     - "@beckykd"
