--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -27,7 +27,6 @@ notebooks = [
     "docs/guides/operator-class.ipynb",
     "docs/guides/operators-overview.ipynb",
     "docs/guides/plot-quantum-states.ipynb",
-    "docs/guides/pulse.ipynb",
     "docs/guides/qiskit-addons-aqc-get-started.ipynb",
     "docs/guides/qiskit-addons-mpf-get-started.ipynb",
     "docs/guides/qiskit-addons-mpf.ipynb",
@@ -131,4 +130,7 @@ notebooks = [
 
     # Todo: check this notebook
     "docs/guides/qunova-chemistry.ipynb",
+
+    # Contains deprecation warnings and it will probably be removed
+    "docs/guides/pulse.ipynb",
 ]
