--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -300,6 +300,8 @@ notifications:
     - "@ElePT"
   "docs/migration-guides/qiskit-quantum-instance":
     - "@ElePT"
+  "docs/migration-guides/qiskit-backendv1-to-v2":
+    - "@ElePT"
   "docs/migration-guides/qiskit-runtime":
     - "@beckykd"
     - "@jyu00"
