Format / lint / CI stuff

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -20,6 +20,11 @@ notifications:
     - "@beckykd"
   "docs/guides/build-noise-models":
     - "`@kevinsung`"
+  "docs/guides/c-extension-for-python":
+    - "@javabster"
+    - "@abbycross"
+    - "@beckykd"
+    - "@cryoris"
   "docs/guides/circuit-library":
     - "@Cryoris"
     - "@frankharkins"
@@ -89,6 +94,11 @@ notifications:
   "docs/guides/index":
     - "@javabster"
     - "@abbycross"
+  "docs/guides/install-c-api":
+    - "@javabster"
+    - "@abbycross"
+    - "@beckykd"
+    - "@cryoris"
   "docs/guides/install-qiskit":
     - "@javabster"
     - "@abbycross"
