Ignore Pulse notebook

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -27,7 +27,6 @@ notebooks = [
     "docs/guides/operator-class.ipynb",
     "docs/guides/operators-overview.ipynb",
     "docs/guides/plot-quantum-states.ipynb",
-    "docs/guides/pulse.ipynb",
     "docs/guides/qiskit-addons-aqc-get-started.ipynb",
     "docs/guides/qiskit-addons-mpf-get-started.ipynb",
     "docs/guides/qiskit-addons-mpf.ipynb",
@@ -131,4 +130,8 @@ notebooks = [
 
     # Todo: check this notebook
     "docs/guides/qunova-chemistry.ipynb",
+
+    # This is broken with the most recent versions of Qiskit/Runtime, but we're
+    # removing the page soon so we've decided not to fix it.
+    "docs/guides/pulse.ipynb",
 ]
