Update qiskit aer version

--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -2,9 +2,8 @@
 # stable build.
 
 qiskit[all]==2.0.0rc1
-#qiskit-ibm-runtime~=0.36.1
-qiskit-ibm-runtime @ git+https://github.com/Qiskit/qiskit-ibm-runtime@main
-qiskit-aer~=0.16.4
+qiskit-ibm-runtime~=0.37.0
+qiskit-aer~=0.17
 qiskit-serverless~=0.20.0
 qiskit-ibm-catalog~=0.4
 qiskit-addon-sqd~=0.10.0
