Explain cloud structure

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -278,6 +278,12 @@ notifications:
     - "`@mtreinish`"
   "docs/guides/upgrade-from-open":
     - "@beckykd"
+  "docs/guides/cloud-account-structure":
+    - "@beckykd"
+    - "@raulotaolea"
+  "docs/guides/plans-overview":
+    - "@beckykd"
+    - "@raulotaolea"
   "docs/guides/view-cost":
     - "@beckykd"
   "docs/guides/visualize-circuits":
