--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -48,9 +48,13 @@ jobs:
           import os
           github_output = os.getenv("GITHUB_OUTPUT")
           all_files = """${{ steps.all-changed.outputs.all_changed_files }}""".split("\n")
+          print(all_files)
 
           config_changed = any(path.startswith("scripts/") for path in all_files)
+          print(config_changed)
           extra_deps = config_changed or any(path in EXTRA_DEPS_NOTEBOOKS for path in all_files)
+          print(any(path in EXTRA_DEPS_NOTEBOOKS for path in all_files))
+          print(extra_deps)
 
           with open(github_output, "a") as output:
             output.write(f"NEEDS_EXTRA_DEPS={str(extra_deps).lower()}")
