--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -48,6 +48,7 @@ jobs:
           import os
           github_output = os.getenv("GITHUB_OUTPUT")
           all_files = """${{ steps.all-changed.outputs.all_changed_files }}""".split("\n")
+          print("""${{ steps.all-changed.outputs.all_changed_files }}""")
           print(all_files)
 
           config_changed = any(path.startswith("scripts/") for path in all_files)
