Turn off write_output_files

--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           files: "{docs/**/*.ipynb,scripts/nb-tester/**/*}"
           separator: "\n"
-          write_output_files: true
+          write_output_files: false
 
       - name: Check if extra linux deps needed
         id: check-deps
