--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -27,11 +27,11 @@ jobs:
 
       - name: Get relevant changed files
         id: all-changed
-        uses: tj-actions/changed-files@2f7c5bfce28377bc069a65ba478de0a74aa0ca32
+        uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
         with:
           files: "{docs/**/*.ipynb,scripts/nb-tester/**/*}"
           separator: "\n"
-          write_output_files: false
+          write_output_files: true
 
       - name: Check if extra linux deps needed
         id: check-deps
