Add considerations file

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -52,6 +52,9 @@ notifications:
   "docs/guides/configure-qiskit-local":
     - "`@mtreinish`"
     - "@frankharkins"
+  "docs/guides/considerations-set-up-runtime":
+    - "@beckykd"
+    - "@abbycross"
   "docs/guides/construct-circuits":
     - "@frankharkins"
   "docs/guides/custom-transpiler-pass":
