add custom roles

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -57,6 +57,9 @@ notifications:
     - "@abbycross"
   "docs/guides/construct-circuits":
     - "@frankharkins"
+  "docs/guides/custom-roles":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/custom-transpiler-pass":
     - "`@nbronn`"
     - "@beckykd"
