--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -148,6 +148,9 @@ notifications:
     - "`@jakelishman`"
     - "@taalexander"
     - "@abbycross"
+  "docs/guides/invite-and-manage-users":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/kipu-optimization":
     - "@abbycross"
     - "@pandasa123"
