add three manage users pgs

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -173,6 +173,15 @@ notifications:
     - "`@lerongil`"
     - "@jyu00"
     - "@beckykd"
+  "docs/guides/manage-appid-cloud":
+    - "@abbycross"
+    - "@beckykd"
+  "docs/guides/manage-appid-id-provider":
+    - "@abbycross"
+    - "@beckykd"
+  "docs/guides/manage-cloud-users":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/map-problem-to-circuits":
     - "@javabster"
     - "@abbycross"
