add quickstart files

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -243,6 +243,12 @@ notifications:
     - "@taalexander"
     - "`@kitbarton`"
     - "`@jakelishman`"
+  "docs/guides/quickstart-org":
+    - "@abbycross"
+    - "@beckykd"
+  "docs/guides/quickstart-steps-org":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/serverless":
     - "@jenglick"
     - "@pandasa123"
