Integrate admin docs (#2893)
If at all possible, merge after
https://github.com/Qiskit/documentation/pull/2864 is merged

- [x] Bring over pages that will stay as standalone pages
- [x] Add to toc and to `qiskit_bot`
- [x] integrate info from Analytics and Workloads (and possibly the
index page) into existing pages
- [x] Check all links (in paths, change `/administration/ `to
`/guides/`; look for `./` etc.)
- [ ] figure out the best order for the new files in the toc
- [x] Add new pill to new pages

---------

Co-authored-by: Rebecca Dimock <beckyd@us.ibm.com>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>
Co-authored-by: Arnau Casau I Playa <arnau.casau@ibm.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -9,6 +9,9 @@ notification_prelude: |
 # we still want their name in the Qiskit Bot message so people know they are
 # relevant.
 notifications:
+  "docs/guides/access-groups":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/addons":
     - "@beckykd"
     - "@jenglick"
@@ -49,8 +52,14 @@ notifications:
   "docs/guides/configure-qiskit-local":
     - "`@mtreinish`"
     - "@frankharkins"
+  "docs/guides/considerations-set-up-runtime":
+    - "@beckykd"
+    - "@abbycross"
   "docs/guides/construct-circuits":
     - "@frankharkins"
+  "docs/guides/custom-roles":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/custom-transpiler-pass":
     - "`@nbronn`"
     - "@beckykd"
@@ -139,6 +148,9 @@ notifications:
     - "`@jakelishman`"
     - "@taalexander"
     - "@abbycross"
+  "docs/guides/invite-and-manage-users":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/kipu-optimization":
     - "@abbycross"
     - "@pandasa123"
@@ -160,6 +172,12 @@ notifications:
   "docs/guides/manage-cost":
     - "`@lerongil`"
     - "@jyu00"
+    - "@beckykd"
+  "docs/guides/manage-appid":
+    - "@abbycross"
+    - "@beckykd"
+  "docs/guides/manage-cloud-users":
+    - "@abbycross"
     - "@beckykd"
   "docs/guides/map-problem-to-circuits":
     - "@javabster"
@@ -222,6 +240,12 @@ notifications:
     - "@taalexander"
     - "`@kitbarton`"
     - "`@jakelishman`"
+  "docs/guides/quickstart-org":
+    - "@abbycross"
+    - "@beckykd"
+  "docs/guides/quickstart-steps-org":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/serverless":
     - "@jenglick"
     - "@pandasa123"
@@ -288,6 +312,12 @@ notifications:
     - "`@mtreinish`"
   "docs/guides/upgrade-from-open":
     - "@beckykd"
+  "docs/guides/cloud-account-structure":
+    - "@beckykd"
+    - "@raulotaolea"
+  "docs/guides/plans-overview":
+    - "@beckykd"
+    - "@raulotaolea"
   "docs/guides/view-cost":
     - "@beckykd"
   "docs/guides/visualize-circuits":
