Turn off cron job for forks

--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -21,6 +21,7 @@ on:
 jobs:
   execute:
     name: Execute notebooks
+    if: github.repository_owner == 'Qiskit'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
