Document instance limiting (#2912)
FYI @francabrera 

closes #2925 

Topics with major updates:  
https://qiskit.github.io/documentation/pr-2912/guides/access-groups
https://qiskit.github.io/documentation/pr-2912/guides/allocation-limits

---------

Co-authored-by: Fran Cabrera <francabrera@users.noreply.github.com>
Co-authored-by: Kaelyn Ferris <43348706+kaelynj@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -118,6 +118,9 @@ notifications:
   "docs/guides/index":
     - "@javabster"
     - "@abbycross"
+  "docs/guides/allocation-limits":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/install-c-api":
     - "@javabster"
     - "@abbycross"
