--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -511,3 +511,11 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-code-assistant-openai-api":
     - "@cbjuan"
+  "docs/tutorials/advanced-techniques-for-qaoa":
+    - "@miamico"
+  "docs/tutorials/compare-transpiler-settings":
+    - "@miamico"
+  "docs/tutorials/grovers-algorithm":
+    - "@miamico"
+  "docs/tutorials/qopt-example":
+    - "@miamico"
