Apply suggestions from code review
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/.github/workflows/weekly-checks.yml
+++ b/.github/workflows/weekly-checks.yml
@@ -78,7 +78,7 @@ jobs:
         - name: Install Node.js dependencies
           run: npm ci
         - name: Check outdated new pills
-          run: npm run check-new-pills'
+          run: npm run check:new-pills
 
   make_issue:
     name: Make issue on failure
