--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -511,3 +511,19 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-code-assistant-openai-api":
     - "@cbjuan"
+  "docs/tutorials/ai-transpiler-introduction.ipynb":
+    - "@miamico"
+  "docs/tutorials/build-repetition-codes.ipynb":
+    - "@miamico"
+  "docs/tutorials/combine-error-mitigation-options-with-the-estimator-primitive.ipynb":
+    - "@miamico"
+  "docs/tutorials/generating-long-range-entanglement-with-measurements.ipynb":
+    - "@miamico"
+  "docs/tutorials/heisenberg-chain.ipynb":
+    - "@miamico"
+  "docs/tutorials/improved-trotterized-time-evolution-with-approximate-quantum-compilation.ipynb":
+    - "@miamico"
+  "docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb":
+    - "@miamico"
+  "docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb":
+    - "@miamico"
