Add some tutorials notebooks (#2949)
We're moving these back to this repo again. I've made a best effort to
attribute file authors correctly, but this isn't really feasible as
we've move these between repos many times.

First four commits copy the files over, the rest are changes I've made
to adapt them for this repo and the documentation website.

### Preview links

*
https://qiskit.github.io/documentation/pr-2949/tutorials/quantum-approximate-optimization-algorithm
*
https://qiskit.github.io/documentation/pr-2949/tutorials/advanced-techniques-for-qaoa
*
https://qiskit.github.io/documentation/pr-2949/tutorials/compare-transpiler-settings
*
https://qiskit.github.io/documentation/pr-2949/tutorials/grovers-algorithm

---------

Co-authored-by: ATSUSHI MATSUO <MATSUOA@jp.ibm.com>
Co-authored-by: Beatriz Carramolino Arranz <beatrizcarramolino@ibm.com>
Co-authored-by: Katie McCormick <Katie.McCormick@ibm.com>
Co-authored-by: Mirko Amico <mamico@ibm.com>
Co-authored-by: Mirko Amico <mirko.amico@outlook.com>
Co-authored-by: Takashi Imamichi <IMAMICHI@jp.ibm.com>
Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Abdullah Ash- Saki <44783187+ashsaki@users.noreply.github.com>
Co-authored-by: Abdón Rodríguez <a@abdonrd.com>
Co-authored-by: ElePT <epenatap@gmail.com>
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>
Co-authored-by: Frank Harkins <Francis.Harkins@ibm.com>
Co-authored-by: Henry Zou <Henry.Zou@ibm.com>
Co-authored-by: Hwajung Kang <hwajungkang@gmail.com>
Co-authored-by: Ikko Hamamura <ikkoham@users.noreply.github.com>
Co-authored-by: Jessie Yu <jessieyu@us.ibm.com>
Co-authored-by: Jim Garrison <garrison@ibm.com>
Co-authored-by: Junye Huang <h.jun.ye@gmail.com>
Co-authored-by: Kaelyn Ferris <43348706+kaelynj@users.noreply.github.com>
Co-authored-by: Kevin J. Sung <kevinjefferysung@gmail.com>
Co-authored-by: Kevin Tian <kevin.tian@ibm.com>
Co-authored-by: Kevin Tian <kt474@cornell.edu>
Co-authored-by: Luciano Bello <bel@zur

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -132,4 +132,10 @@ notebooks = [
     # This is broken with the most recent versions of Qiskit/Runtime, but we're
     # removing the page soon so we've decided not to fix it.
     "docs/guides/pulse.ipynb",
+
+    # We never run tutorials notebooks
+    "docs/tutorials/advanced-techniques-for-qaoa.ipynb",
+    "docs/tutorials/circuit-transpilation-settings.ipynb",
+    "docs/tutorials/grovers-algorithm.ipynb",
+    "docs/tutorials/quantum-approximate-optimization-algorithm.ipynb",
 ]
