--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -511,21 +511,21 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-code-assistant-openai-api":
     - "@cbjuan"
-  "docs/tutorials/ai-transpiler-introduction.ipynb":
+  "docs/tutorials/ai-transpiler-introduction":
     - "@miamico"
-  "docs/tutorials/build-repetition-codes.ipynb":
+  "docs/tutorials/build-repetition-codes":
     - "@miamico"
-  "docs/tutorials/combine-error-mitigation-options-with-the-estimator-primitive.ipynb":
+  "docs/tutorials/combine-error-mitigation-options-with-the-estimator-primitive":
     - "@miamico"
-  "docs/tutorials/generating-long-range-entanglement-with-measurements.ipynb":
+  "docs/tutorials/generating-long-range-entanglement-with-measurements":
     - "@miamico"
-  "docs/tutorials/heisenberg-chain.ipynb":
+  "docs/tutorials/heisenberg-chain":
     - "@miamico"
-  "docs/tutorials/improved-trotterized-time-evolution-with-approximate-quantum-compilation.ipynb":
+  "docs/tutorials/improved-trotterized-time-evolution-with-approximate-quantum-compilation":
     - "@miamico"
-  "docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb":
+  "docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation":
     - "@miamico"
-  "docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb":
+  "docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity":
     - "@miamico"
   "docs/tutorials/advanced-techniques-for-qaoa":
     - "@miamico"
