--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -138,4 +138,12 @@ notebooks = [
     "docs/tutorials/circuit-transpilation-settings.ipynb",
     "docs/tutorials/grovers-algorithm.ipynb",
     "docs/tutorials/quantum-approximate-optimization-algorithm.ipynb",
+    "docs/tutorials/ai-transpiler-introduction.ipynb",
+    "docs/tutorials/improved-trotterized-time-evolution-with-approximate-quantum-compilation.ipynb",
+    "docs/tutorials/combine-error-mitigation-options-with-the-estimator-primitive.ipynb",
+    "docs/tutorials/heisenberg-chain.ipynb",
+    "docs/tutorials/generating-long-range-entanglement-with-measurements.ipynb",
+    "docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb",
+    "docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb",
+    "docs/tutorials/build-repetition-codes.ipynb",
 ]
