--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -138,4 +138,12 @@ notebooks = [
     "docs/tutorials/circuit-transpilation-settings.ipynb",
     "docs/tutorials/grovers-algorithm.ipynb",
     "docs/tutorials/quantum-approximate-optimization-algorithm.ipynb",
+    "docs/tutorials/wire-cutting-to-improve-performance.ipynb",
+    "docs/tutorials/variational-quantum-eigensolver.ipynb",
+    "docs/tutorials/transpilation-optimizations-with-sabre.ipynb",
+    "docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb",
+    "docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb",
+    "docs/tutorials/quantum-kernel-training.ipynb",
+    "docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification.ipynb",
+    "docs/tutorials/repeat-until-success.ipynb",
 ]
