--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -516,3 +516,19 @@ notifications:
     - "@miamico"
   "docs/tutorials/quantum-approximate-optimization-algorithm":
     - "@miamico"
+  "docs/tutorials/quantum-kernel-training":
+    - "@miamico"
+  "docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting":
+    - "@miamico"
+  "docs/tutorials/repeat-until-success":
+    - "@miamico"
+  "docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding":
+    - "@miamico"
+  "docs/tutorials/transpilation-optimizations-with-sabre":
+    - "@miamico"
+  "docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification":
+    - "@miamico"
+  "docs/tutorials/variational-quantum-eigensolver":
+    - "@miamico"
+  "docs/tutorials/wire-cutting-to-improve-performance":
+    - "@miamico"
