--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,9 @@ jobs:
       - name: Check all notebooks are listed in the config file
         run: python scripts/ci/check-all-notebooks-are-tested.py
 
+      - name: Check tutorials overview page
+        run: python scripts/ci/check-tutorials-overview-page.py
+
       - name: Lint notebooks
         shell: python
         run: |
