Update qiskit bot

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -548,3 +548,7 @@ notifications:
     - "@miamico"
   "docs/tutorials/wire-cutting-to-improve-performance":
     - "@miamico"
+  "docs/tutorials/index":
+    - "@miamico"
+  "docs/tutorials/_toc":
+    - "@miamico"
