Add to config files

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -548,3 +548,21 @@ notifications:
     - "@miamico"
   "docs/tutorials/wire-cutting-to-improve-performance":
     - "@miamico"
+  "docs/tutorials/building-workflows-with-the-ibm-circuit-function":
+    - "@miamico"
+  "docs/tutorials/qunova-hivqe":
+    - "@miamico"
+  "docs/tutorials/real-time-benchmarking-for-qubit-selection":
+    - "@miamico"
+  "docs/tutorials/scaling-periodic-boundary-problems-with-circuit-cutting":
+    - "@miamico"
+  "docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd":
+    - "@miamico"
+  "docs/tutorials/krylov-subspace-expansion":
+    - "@miamico"
+  "docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci":
+    - "@miamico"
+  "docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver":
+    - "@miamico"
+  "docs/tutorials/chsh-inequality":
+    - "@miamico"
