--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -154,4 +154,13 @@ notebooks = [
     "docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification.ipynb",
     "docs/tutorials/variational-quantum-eigensolver.ipynb",
     "docs/tutorials/wire-cutting-to-improve-performance.ipynb",
+    "docs/tutorials/building-workflows-with-the-ibm-circuit-function.ipynb",
+    "docs/tutorials/qunova-hivqe.ipynb",
+    "docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb",
+    "docs/tutorials/scaling-periodic-boundary-problems-with-circuit-cutting.ipynb",
+    "docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd.ipynb",
+    "docs/tutorials/krylov-subspace-expansion.ipynb",
+    "docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci.ipynb",
+    "docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb",
+    "docs/tutorials/chsh-inequality.ipynb",
 ]
