add to notebook-testing.toml

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -159,6 +159,7 @@ notebooks = [
     "docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb",
     "docs/tutorials/scaling-periodic-boundary-problems-with-circuit-cutting.ipynb",
     "docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd.ipynb",
+    "docs/tutorials/improving-energy-estimation-of-a-fermionic-lattice-model-with-sqd.ipynb",
     "docs/tutorials/krylov-subspace-expansion.ipynb",
     "docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci.ipynb",
     "docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb",
