--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -558,8 +558,10 @@ notifications:
     - "@miamico"
   "docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd":
     - "@miamico"
+    - "`@kevinsung`"
   "docs/tutorials/improving-energy-estimation-of-a-fermionic-lattice-model-with-sqd":
     - "@miamico"
+    - "`@kevinsung`"
   "docs/tutorials/krylov-subspace-expansion":
     - "@miamico"
   "docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci":
