put backticks around kevinsung

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -81,7 +81,7 @@ notifications:
     - "`@nbronn`"
     - "`@mtreinish`"
   "docs/guides/error-mitigation-and-suppression-techniques":
-    - "@kevinsung"
+    - "`@kevinsung`"
   "docs/guides/estimate-job-run-time":
     - "@jyu00"
     - "@beckykd"
