update issue templates

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -1,6 +1,6 @@
 name: 🪲 Content bug or inaccuracy with non-API docs
 description: Report typos, bugs, out-of-date content, broken links, etc.
-labels: ["bug 🐛", "content 📄", "needs triage 🤔"]
+labels: ["content 📄", "needs triage 🤔"]
 assignees:
   - abbycross
   - beckykd
