--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         id: all-changed-files
         uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
         with:
-          files: docs/**/*.{md,mdx,ipynb}
+          files: {docs,learning}/**/*.{md,mdx,ipynb}
           separator: "\n"
           write_output_files: true
 
