--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -15,6 +15,7 @@ on:
   pull_request:
     paths:
       - "docs/**/*"
+      - "learning/**/*"
       - "public/images/**/*"
       # PR previews don't build API docs.
       - "!docs/api/**/*"
