--- a/.github/workflows/notebook-test-extended.yml
+++ b/.github/workflows/notebook-test-extended.yml
@@ -24,7 +24,7 @@ jobs:
         id: all-changed
         uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
         with:
-          files: "{docs/**/*.ipynb,scripts/nb-tester/**/*}"
+          files: "{{docs,learning}/**/*.ipynb,scripts/nb-tester/**/*}"
           separator: "\n"
           write_output_files: true
 
