--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -15,6 +15,7 @@ on:
   pull_request:
     paths:
       - "docs/**/*.ipynb"
+      - "learning/**/*.ipynb"
       - "!docs/api/**/*"
       - "scripts/nb-tester/**/*"
   workflow_dispatch:
@@ -30,7 +31,7 @@ jobs:
         id: all-changed
         uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
         with:
-          files: "{docs/**/*.ipynb,scripts/nb-tester/**/*}"
+          files: "{{docs,learning}/**/*.ipynb,scripts/nb-tester/**/*}"
           separator: "\n"
           write_output_files: true
 
