--- a/.github/workflows/weekly-checks.yml
+++ b/.github/workflows/weekly-checks.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Check external links
         env:
           GITHUB_TOKEN: ${{ github.token }}
-        run: npm run check:external-links -- 'docs/**/*.{md,mdx,ipynb}'
+        run: npm run check:external-links -- '{docs,learning}/**/*.{md,mdx,ipynb}'
 
     new-pill-checker:
       runs-on: ubuntu-latest
