--- a/.github/ISSUE_TEMPLATE/new-content.yaml
+++ b/.github/ISSUE_TEMPLATE/new-content.yaml
@@ -12,7 +12,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        ⚠️ Note that this repository is only for non-API content that is hosted at https://docs.quantum.ibm.com/.
+        ⚠️ Note that this repository is only for non-API content that is hosted on IBM Quantum Platform.
   - type: markdown
     attributes:
       value: |
