--- a/.github/ISSUE_TEMPLATE/courses.yaml
+++ b/.github/ISSUE_TEMPLATE/courses.yaml
@@ -1,9 +1,9 @@
-name: \[TUTORIALS\] Typo report or new content request
+name: \[COURSES\] Typo report or new content request
 description: Report typos, bugs, out-of-date content, broken links, etc. or make a request for new content
-labels: ["content 📄", "tutorial 📒", "needs triage 🤔"]
+labels: ["content 📄", "course 🎓", "needs triage 🤔"]
 assignees:
-  - miamico
-  - nathanearnestnoble
+  - jhwatrous
+  - livlanes
 
 body:
   - type: markdown
@@ -12,11 +12,11 @@ body:
   - type: markdown
     attributes:
       value: |
-        ⚠️ Note that this issue template is only for tutorials content; verify that /tutorials/ is in the URL.
+        ⚠️ Note that this issue template is only for course content; verify that /learning/ is in the URL.
   - type: markdown
     attributes:
       value: |
-        * If your issue concerns courses (with /learning/ in the URL), use the [Courses issue template](https://github.com/Qiskit/documentation/issues/new?template=courses.yaml) instead.
+        * If your issue concerns tutorials (with /tutorials/ in the URL), use the [Tutorials issue template](https://github.com/Qiskit/documentation/issues/new?template=tutorials.yaml) instead.
   - type: markdown
     attributes:
       value: |
