add content label to UI feedback

--- a/.github/ISSUE_TEMPLATE/ui.yml
+++ b/.github/ISSUE_TEMPLATE/ui.yml
@@ -1,6 +1,6 @@
 name: 📱 UI issue or feature request
 description: Report a rendering or other visual problem with the user interface, or request a new feature.
-labels: ["UI feedback"]
+labels: ["UI feedback", "content 📄"]
 assignees:
   - abbycross
   - beckykd
