--- a/.github/ISSUE_TEMPLATE/guides.yaml
+++ b/.github/ISSUE_TEMPLATE/guides.yaml
@@ -32,7 +32,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        * If your issue concerns a Qiskit Ecosystem project, open an issue in the relevant [Ecosystem project repository](https://qiskit.github.io/ecosystem/).
+        * If your issue concerns a Qiskit ecosystem project, open an issue in the relevant [ecosystem project repository.](https://www.ibm.com/quantum/ecosystem)
 
   - type: textarea
     attributes:
