replace content w/ infra

--- a/.github/ISSUE_TEMPLATE/ui.yml
+++ b/.github/ISSUE_TEMPLATE/ui.yml
@@ -1,6 +1,6 @@
 name: 📱 UI issue or feature request
 description: Report a rendering or other visual problem with the user interface, or request a new feature.
-labels: ["UI feedback", "content 📄"]
+labels: ["UI feedback", "infra 🏗️"]
 assignees:
   - abbycross
   - beckykd
