Apply suggestions from code review
Co-authored-by: Abby Mitchell <23662430+javabster@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/tutorials.yaml
+++ b/.github/ISSUE_TEMPLATE/tutorials.yaml
@@ -1,4 +1,4 @@
-name: \[TUTORIALS\] Typo report or new content request
+name: \[TUTORIALS\] Report bug/typo or request new content
 description: Report typos, bugs, out-of-date content, broken links, etc. or make a request for new content
 labels: ["content 📄", "tutorial 📒", "needs triage 🤔"]
 assignees:
