--- a/.github/ISSUE_TEMPLATE/guides.yaml
+++ b/.github/ISSUE_TEMPLATE/guides.yaml
@@ -1,4 +1,4 @@
-name: \[GUIDES AND ADDITIONAL RESOURCES\] Typo report or new content request
+name: \[GUIDES AND ADDITIONAL RESOURCES\] Report a bug/typo or request new content
 description: Report typos, bugs, out-of-date content, broken links, etc. or make a request for new content
 labels: ["content 📄", "needs triage 🤔"]
 assignees:
