Run API and notebook tests on workflow change

--- a/.github/workflows/api-checks.yml
+++ b/.github/workflows/api-checks.yml
@@ -19,6 +19,7 @@ on:
       - "public/api/**/*"
       - "public/images/api/**/*"
       - "scripts/js/**/*"
+      - ".github/workflows/api-checks.yml"
 
 jobs:
   api-checks:
