Run API and notebook tests on workflow change (#3048)
Fixes #2885

--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -14,6 +14,7 @@ name: Test notebooks
 on:
   pull_request:
     paths:
+      - ".github/workflows/notebook-test.yml"
       - "docs/**/*.ipynb"
       - "!docs/api/**/*"
       - "scripts/nb-tester/**/*"
@@ -30,7 +31,7 @@ jobs:
         id: all-changed
         uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
         with:
-          files: "{docs/**/*.ipynb,scripts/nb-tester/**/*}"
+          files: "{docs/**/*.ipynb,scripts/nb-tester/**/*,.github/workflows/notebook-test.yml}"
           separator: "\n"
           write_output_files: true
 
@@ -50,7 +51,7 @@ jobs:
           github_output = os.getenv("GITHUB_OUTPUT")
           all_files = """${{ steps.all-changed.outputs.all_changed_files }}""".split("\n")
 
-          config_changed = any(path.startswith("scripts/") for path in all_files)
+          config_changed = any(path.startswith("scripts/") or path.startswith(".github") for path in all_files)
           extra_deps = config_changed or any(path in EXTRA_DEPS_NOTEBOOKS for path in all_files)
 
           with open(github_output, "a") as output:
