Update issue templates  (#3041)
part of #2744

---------

Co-authored-by: Abby Mitchell <23662430+javabster@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/ui.yml
+++ b/.github/ISSUE_TEMPLATE/ui.yml
@@ -1,6 +1,6 @@
-name: 📱 UI issue
-description: Report a rendering or other visual problem with the user interface.
-labels: ["UI feedback"]
+name: 📱 UI issue or feature request
+description: Report a rendering or other visual problem with the user interface, or request a new feature.
+labels: ["UI feedback", "infra 🏗️"]
 assignees:
   - abbycross
   - beckykd
@@ -21,7 +21,7 @@ body:
 
   - type: textarea
     attributes:
-      label: Please describe the UI problem.
+      label: Please describe the UI problem or feature request.
       description: >
         Please be as specific as possible. Include steps to reproduce, the operating system and browser you're using, a screenshot if possible, etc.
     validations:
