--- a/.github/ISSUE_TEMPLATE/courses.yaml
+++ b/.github/ISSUE_TEMPLATE/courses.yaml
@@ -1,4 +1,4 @@
-name: \[COURSES\] Report a bug/typo or request new content
+name: [COURSES] Report a bug/typo or request new content
 description: Report typos, bugs, out-of-date content, broken links, etc. or make a request for new content
 labels: ["content 📄", "course 🎓", "needs triage 🤔"]
 assignees:
@@ -20,7 +20,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        * If your issue concerns guides or additional resources, use the [Guides issue template](https://github.com/Qiskit/documentation/issues/new?template=guides.yml) instead.
+        * If your issue concerns guides or additional resources, use the [Guides issue template](https://github.com/Qiskit/documentation/issues/new?template=guides.yaml) instead.
   - type: markdown
     attributes:
       value: |
