--- a/.github/ISSUE_TEMPLATE/tutorials.yaml
+++ b/.github/ISSUE_TEMPLATE/tutorials.yaml
@@ -1,4 +1,4 @@
-name: [TUTORIALS] Report bug/typo or request new content
+name: (TUTORIALS) Report bug/typo or request new content
 description: Report typos, bugs, out-of-date content, broken links, etc. or make a request for new content
 labels: ["content 📄", "tutorial 📒", "needs triage 🤔"]
 assignees:
