Audit tutorials for 2.0 compatibility (#2980)
Closes #2967 

List of tutorials to check:

- [x] `advanced-techniques-for-qaoa.ipynb`
- [x] `ai-transpiler-introduction.ipynb`
- [x] `build-repetition-codes.ipynb`
- [x] `building-workflows-with-the-ibm-circuit-function.ipynb`
- [x] `chsh-inequality.ipynb`
- [x] `circuit-transpilation-settings.ipynb`
- [x]
`combine-error-mitigation-options-with-the-estimator-primitive.ipynb`
- [x]
`compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci.ipynb`
- [x] `generating-long-range-entanglement-with-measurements.ipynb`
- [x] `grovers-algorithm.ipynb`
- [x] `heisenberg-chain.ipynb`
- [x]
`improved-trotterized-time-evolution-with-approximate-quantum-compilation.ipynb`
- [x]
`improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd.ipynb`
- [x]
`improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb`
- [x] `krylov-subspace-expansion.ipynb`
- [x] `long-range-entanglement-with-limited-qubit-connectivity.ipynb`
- [x] `quantum-approximate-optimization-algorithm.ipynb`
- [x] `quantum-kernel-training.ipynb`
- [x] `qunova-hivqe.ipynb`
- [x] `real-time-benchmarking-for-qubit-selection.ipynb`
- [x] `reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb`
- [x] `repeat-until-success.ipynb`
- [x] `scaling-periodic-boundary-problems-with-circuit-cutting.ipynb`
- [x]
`solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb`
- [x]
`solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb`
- [x] `transpilation-optimizations-with-sabre.ipynb`
- [x]
`utility-scale-error-mitigation-with-probabilistic-error-amplification.ipynb`
- [x] `variational-quantum-eigensolver.ipynb`
- [x] `wire-cutting-to-improve-performance.ipynb`

--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -3,6 +3,7 @@
 
 qiskit[all]~=2.0.0
 qiskit-ibm-runtime~=0.37.0
+qiskit-ibm-transpiler[ai-local-mode]~=0.11.0
 qiskit-aer~=0.17
 qiskit-serverless~=0.21.0
 qiskit-ibm-catalog~=0.5.0
@@ -15,4 +16,4 @@ qiskit-addon-cutting~=0.10.0
 scipy~=1.15.2
 scikit-learn~=1.6.1
 pyscf~=2.8.0; sys.platform != 'win32'
-networkx~=3.4.2
+#networkx~=3.4.2
