--- a/.github/ISSUE_TEMPLATE/guides.yaml
+++ b/.github/ISSUE_TEMPLATE/guides.yaml
@@ -36,7 +36,7 @@ body:
 
   - type: textarea
     attributes:
-      label: URL to the relevant tutorial
+      label: URL to the relevant guide or resource
       description: provide a URL and section name/paragraph if reporting a problem with existing content.
     validations:
       required: false
