--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -570,6 +570,15 @@ notifications:
     - "@RitajitMajumdar"
   "docs/tutorials/qunova-hivqe":
     - "@miamico"
+    - "@aidanpellow"
+    - "@jaewan-qunova"
+    - "@Jenay-Patel"
+    - "@PilsunYoo01"
+    - "@RowPJ"
+    - "@shanemcfarthing"
+    - "@johannesgreiner"
+    - "@pandasa123"
+    - "@abbycross"
   "docs/tutorials/real-time-benchmarking-for-qubit-selection":
     - "@miamico"
   "docs/tutorials/scaling-periodic-boundary-problems-with-circuit-cutting":
