Add notebooks to testing config

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -163,4 +163,11 @@ notebooks = [
     "docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci.ipynb",
     "docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb",
     "docs/tutorials/chsh-inequality.ipynb",
+
+    # Don't test any learning notebooks
+    "learning/courses/quantum-computing-in-practice/introduction.ipynb",
+    "learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb",
+    "learning/courses/quantum-computing-in-practice/coming-soon-mapping.ipynb",
+    "learning/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for.ipynb",
+    "learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb",
 ]
