--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -610,3 +610,13 @@ notifications:
     - "@johannesgreiner"
   "docs/tutorials/chsh-inequality":
     - "@miamico"
+  "learning/courses/quantum-computing-in-practice/introduction":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/running-quantum-circuits":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/coming-soon-mapping":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/utility-scale-qaoa":
+    - "@livlanes"
