Add overview page

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -620,3 +620,5 @@ notifications:
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/utility-scale-qaoa":
     - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/index":
+    - "@livlanes"
