--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -445,6 +445,7 @@ notifications:
     - "@jenglick"
     - "@garrison"
     - "@johannesgreiner"
+    - "@ElePT"
   "docs/guides/q-ctrl-optimization-solver":
     - "@kaelynj"
     - "@abbycross"
@@ -510,59 +511,102 @@ notifications:
     - "@cbjuan"
   "docs/tutorials/ai-transpiler-introduction":
     - "@miamico"
+    - "@henryzou50"
   "docs/tutorials/build-repetition-codes":
     - "@miamico"
+    - "@henryzou50"
   "docs/tutorials/combine-error-mitigation-options-with-the-estimator-primitive":
     - "@miamico"
+    - "@RitajitMajumdar"
   "docs/tutorials/generating-long-range-entanglement-with-measurements":
     - "@miamico"
+    - "@kevinsung"
   "docs/tutorials/heisenberg-chain":
     - "@miamico"
+    - "@MeltemTolunay"
   "docs/tutorials/improved-trotterized-time-evolution-with-approximate-quantum-compilation":
     - "@miamico"
+    - "@henryzou50"
   "docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation":
     - "@miamico"
+    - "@RitajitMajumdar"
   "docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity":
     - "@miamico"
   "docs/tutorials/advanced-techniques-for-qaoa":
     - "@miamico"
+    - "@a-matsuo"
   "docs/tutorials/circuit-transpilation-settings":
     - "@miamico"
+    - "@henryzou50"
   "docs/tutorials/grovers-algorithm":
     - "@miamico"
+    - "@henryzou50"
   "docs/tutorials/quantum-approximate-optimization-algorithm":
     - "@miamico"
+    - "@a-matsuo"
   "docs/tutorials/quantum-kernel-training":
     - "@miamico"
   "docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting":
     - "@miamico"
+    - "@RitajitMajumdar"
   "docs/tutorials/repeat-until-success":
     - "@miamico"
   "docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding":
     - "@miamico"
+    - "@a-matsuo"
   "docs/tutorials/transpilation-optimizations-with-sabre":
     - "@miamico"
+    - "@henryzou50"
   "docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification":
     - "@miamico"
   "docs/tutorials/variational-quantum-eigensolver":
     - "@miamico"
+    - "@MeltemTolunay"
   "docs/tutorials/wire-cutting-to-improve-performance":
     - "@miamico"
+    - "@RitajitMajumdar"
   "docs/tutorials/building-workflows-with-the-ibm-circuit-function":
     - "@miamico"
+    - "@RitajitMajumdar"
   "docs/tutorials/qunova-hivqe":
     - "@miamico"
+    - "@aidanpellow"
+    - "@jaewan-qunova"
+    - "@Jenay-Patel"
+    - "@PilsunYoo01"
+    - "@RowPJ"
+    - "@shanemcfarthing"
+    - "@johannesgreiner"
+    - "@pandasa123"
+    - "@abbycross"
   "docs/tutorials/real-time-benchmarking-for-qubit-selection":
     - "@miamico"
   "docs/tutorials/scaling-periodic-boundary-problems-with-circuit-cutting":
     - "@miamico"
+    - "@RitajitMajumdar"
   "docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd":
     - "@miamico"
+    - "@kevinsung"
   "docs/tutorials/krylov-subspace-expansion":
     - "@miamico"
   "docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci":
     - "@miamico"
+    - "@kaelynj"
+    - "@abbycross"
+    - "@pandasa123"
+    - "@imai-quantum"
+    - "@rykojima"
+    - "@dchung0741"
+    - "@johannesgreiner"
   "docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver":
     - "@miamico"
+    - "@kaelynj"
+    - "@abbycross"
+    - "@pandasa123"
+    - "@jrowenwu"
+    - "@dcanuto"
+    - "@ThomasMerkh"
+    - "@alexshih"
+    - "@johannesgreiner"
   "docs/tutorials/chsh-inequality":
     - "@miamico"
