cleanup qiskit_bot

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -551,6 +551,8 @@ notifications:
     - "@RitajitMajumdar"
   "docs/tutorials/repeat-until-success":
     - "@miamico"
+  "docs/tutorials/probabilistic-error-amplification":
+    - "@miamico"
   "docs/tutorials/pauli-correlation-encoding-for-qaoa":
     - "@miamico"
     - "@a-matsuo"
@@ -560,10 +562,10 @@ notifications:
   "docs/tutorials/variational-quantum-eigensolver":
     - "@miamico"
     - "@MeltemTolunay"
-  "docs/tutorials/wire-cutting-to-improve-performance":
+  "docs/tutorials/wire-cutting":
     - "@miamico"
     - "@RitajitMajumdar"
-  "docs/tutorials/building-workflows-with-the-ibm-circuit-function":
+  "docs/tutorials/error-mitigation-with-qiskit-functions":
     - "@miamico"
     - "@RitajitMajumdar"
   "docs/tutorials/qunova-hivqe":
