Add tutorials overview and TOC (#2978)
Also adds a script to check the page is valid.

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>
Co-authored-by: Mirko Amico <31739486+miamico@users.noreply.github.com>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -509,6 +509,10 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-code-assistant-openai-api":
     - "@cbjuan"
+  "docs/tutorials/index":
+    - "@miamico"
+  "docs/tutorials/_toc":
+    - "@miamico"
   "docs/tutorials/ai-transpiler-introduction":
     - "@miamico"
     - "@henryzou50"
